@@ -268,6 +268,7 @@
 #define IDS_PROGRS_MIMETYPE             1236
 #define IDS_PROGRS_COPY_WARNING         1238
 #define IDS_PROGRS_COMMITT_TRUNK        1239
+#define IDS_PROGRS_REVERTMARKERS        1240
 #define IDS_SETTINGS_SELECTDIFF         1241
 #define IDS_SETTINGS_SELECTDIFFVIEWER   1242
 #define IDS_SETTINGS_SELECTMERGE        1243
